# cpp-sbom-builder

./: .gitignore  DESIGN.md  README.md  go.mod  integration_test.go  main.go
cmd/: root.go  run_test.go  validate_test.go
design/: High-level-design.txt  README.txt
internal/: detector.go  formatter.go  merger.go  stdlib.go  walker.go
internal/detector/: cmake.go  cmake_test.go  conan.go  conan_test.go  detector.go  includes.go  includes_test.go  util.go  vcpkg.go  vcpkg_test.go  walk.go
internal/detector/testdata/cmake/: CMakeLists.txt
internal/detector/testdata/conan/: conanfile.txt
internal/detector/testdata/includes/: main.cpp
internal/detector/testdata/vcpkg/: vcpkg.json
internal/formatter/: formatter.go  formatter_test.go
internal/merger/: merger.go  merger_test.go
internal/skipdir/: skipdir.go  skipdir_test.go
internal/stdlib/: stdlib.go  stdlib_test.go
internal/walker/: walker.go  walker_test.go
testdata/sample_project/: CMakeLists.txt  vcpkg.json
testdata/sample_project/src/: main.cpp
